More direct download link for LDD.

--- a/index.htm
+++ b/index.htm
@@ -713,7 +713,7 @@
 		<div class="footer">
 			not-© 2019 benobiTech incorporated. No rights reserved.<br />
 			Parts used are from the set <a href="https://shop.lego.com/de-CH/product/Forschungsschiff-42064">LEGO 42064 "Ocean Explorer"</a><br />
-			Created with the <a href="https://www.lego.com/de-de/ldd/">LEGO Digital Designer LDD</a>.
+			Created with the <a href="https://www.lego.com/de-de/ldd/download">LEGO Digital Designer LDD</a>.
 		</div>
 	</body>
 </html>
