Lego Logo hidden because of Lego Logo

--- a/index.htm
+++ b/index.htm
@@ -262,7 +262,7 @@
         </script>
 	</head>
 	<body onload="biStep(0)">
-        <div class="header"><img id="logoImg" src="swaufsteller/Images/Logo.png" /></div>
+        <div class="header"><!--<img id="logoImg" src="swaufsteller/Images/Logo.png" />--></div>
         <div class="headerPrint"><img src="swaufsteller/Images/Header_print.png" /></div>
 		
         <div class="stepdisplay" id="step_display"></div>
