--- a/index.htm
+++ b/index.htm
@@ -84,6 +84,7 @@
 				width: 910px;
 				padding: 0;
 				margin: 0;
+				background-image: url('swaufsteller/Images/semitransparent.png');
 			}
 			
 			.modelParts 
@@ -218,7 +219,7 @@
         <script language="javascript" type="text/javascript">
             
             var biCurStep=0;
-			var numSteps = 34;
+			var numSteps = 35;
             
             function returnTest(e) {
                 var keynum = 0;
@@ -270,19 +271,19 @@
 		
         <div class="step" id="step_0">
             <div style="float:left"><img class="img_preview" src="swaufsteller/Images/preview_1.jpg" /></div>
-            <div class="modelName"><span style="font-weight:bold">Nintendo Switch Aufsteller [NSA]</span><br /><br />Number of Bricks: <span style="font-weight:bold">62</span></p></div>
+            <div class="modelName"><span style="font-weight:bold">Switch Standup Display</span><br /><br />Number of Bricks: <span style="font-weight:bold">62 + Some</span></p></div>
             <div style="clear:both"></div>
         </div>
 
         <div class="step" id="step_1">
-            <div class="modelName"><span style="font-weight:bold">Adjustable angle.</span><br /><br />Number of Bricks: <span style="font-weight:bold">62</span></p></div>
+            <div class="modelName"><span style="font-weight:bold">Adjustable angle.</span></p></div>
             <div style="float:left"><img class="img_preview" src="swaufsteller/Images/preview_2.jpg" /></div>
             <div style="clear:both"></div>
         </div>
 
 		<div class="step" id="step_2">
-            <div class="modelName"><p><span style="font-weight:bold">Put it wherever you want. :)</span><br /><br />Number of Bricks: <span style="font-weight:bold">62</span></p></div>
-            <div style="float:left"><img class="img_preview" src="swaufsteller/Images/preview_3.jpg" /></div>
+            <div class="modelName"><p><span style="font-weight:bold">NEW: Top bar which can be locked to hold the Switch in place even if it is facing downwards. :)</span></p></div>
+            <div style="float:left"><img class="img_preview" src="swaufsteller/Images/preview_3.png" /></div>
             <div style="clear:both"></div>
         </div>
 		
@@ -465,11 +466,6 @@
         <div class="step" id="step_14">
             <div style="float:left">
                 <div class="stepTextTop"><p><span style="font-weight:bold">Step 12 of 19</span></p></div>
-				<div class="modelParts">
-					<ul>
-
-					</ul>
-				</div>
             </div>
             <div class="stepContent" style="float:left"><img height="600" width="800" src="swaufsteller/Step12.png" /></div>
             <div style="clear:both"></div>
@@ -589,7 +585,7 @@
 		
         <div class="step" id="step_22">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 2 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 1 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -603,7 +599,7 @@
         </div>			
         <div class="step" id="step_23">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 3 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 2 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -621,7 +617,7 @@
         </div>			
         <div class="step" id="step_24">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 4 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 3 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -637,7 +633,7 @@
         </div>			
         <div class="step" id="step_25">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 5 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 4 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -651,7 +647,7 @@
         </div>			
         <div class="step" id="step_26">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 6 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 5 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -671,7 +667,7 @@
         </div>			
         <div class="step" id="step_27">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 7 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 6 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -683,11 +679,11 @@
 				</div>
             </div>
             <div style="float:left"><img height="600" width="800" src="swtop/Step7.png" /></div>
-            <div style="clear:both"></div>
+            <div style="clear:both"></div>6
         </div>			
         <div class="step" id="step_28">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 8 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 7 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>2 x</p></li>
@@ -703,7 +699,7 @@
         </div>			
         <div class="step" id="step_29">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 9 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 8 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>2 x</p></li>
@@ -721,19 +717,14 @@
         </div>			
         <div class="step" id="step_30">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 10 of 14</span></p></div>
-				<div class="modelParts">
-					<ul>
-
-					</ul>
-				</div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 9 of 14</span></p></div>
             </div>
             <div style="float:left"><img height="600" width="800" src="swtop/Step10.png" /></div>
             <div style="clear:both"></div>
         </div>			
         <div class="step" id="step_31">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 11 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 10 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -747,7 +738,7 @@
         </div>			
         <div class="step" id="step_32">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 12 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 11 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -765,7 +756,7 @@
         </div>			
         <div class="step" id="step_33">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 13 of 14</span></p></div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 12 of 14</span></p></div>
 				<div class="modelParts">
 					<ul>
 							<li class="stepText"><p>1 x</p></li>
@@ -781,17 +772,20 @@
         </div>			
         <div class="step" id="step_34">
             <div style="float:left">
-                <div class="stepTextTop"><p><span style="font-weight:bold">Step 14 of 14</span></p></div>
-				<div class="modelParts">
-					<ul>
-
-					</ul>
-				</div>
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 13 of 14</span></p></div>
             </div>
             <div style="float:left"><img height="600" width="800" src="swtop/Step14.png" /></div>
             <div style="clear:both"></div>
         </div>
 
+		<div class="step" id="step_35">
+            <div style="float:left">
+                <div class="stepTextTop"><p><span style="font-weight:bold">Step 14 of 14</span></p></div>
+            </div>
+            <div style="float:left"><img height="600" width="800" src="swtop/Step15.png" /></div>
+            <div style="clear:both"></div>
+        </div>
+		
         <div class="step" id="step_elements">
             	<div class="biElement">
                     <table border="0">
@@ -1002,8 +996,8 @@
                     <td><input id="stepNumber" onkeydown="returnTest(window.event)" type="text" style="text-align:center;width:56px;height:28px;border:1px solid #cccccc;font-size:14px;font-weight:bold" /></td>
                     <td><a onclick="biStep(biCurStep+1);" href="#"><img border="0" alt="First" src="swaufsteller/Images/Arrow_Forward.png" /></a></td>
                     <td><a onclick="biStep(21);" href="#"><img border="0" alt="First" src="swaufsteller/Images/Arrow_Last.png" /></a></td>
-                    <td><a onclick="biStep(34);" href="#"><img border="0" alt="First" src="swaufsteller/Images/Arrow_Last.png" /></a></td>
-                    <td><a onclick="biStep(34+1);" href="#"><img border="0" alt="First" src="swaufsteller/Images/Arrow_Last.png" /></a></td>
+                    <td><a onclick="biStep(35);" href="#"><img border="0" alt="First" src="swaufsteller/Images/Arrow_Last.png" /></a></td>
+                    <td><a onclick="biStep(35+1);" href="#"><img border="0" alt="First" src="swaufsteller/Images/Arrow_Last.png" /></a></td>
                     <td style="width:40px">&nbsp;</td>
                     <td><a onclick="window.print();return false;" href="#"><img border="0" alt="Print" src="swaufsteller/Images/PrintIcon.png" /></a></td>
                 </tr>
